fix: unexpected cfgs

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -75,3 +75,7 @@ features = ["stream"]
 [[bench]]
 name = "main"
 harness = false
+
+[lints.rust.unexpected_cfgs]
+level = "warn"
+check-cfg = ["cfg(fuzzing)"]
